--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  background: #010712;
+}
+.container{
+  margin:10vw;
+
+}
+.box{
+  height: 20rem;
+  width: 20rem;
+  background-color: aqua;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: capitalize;
+  cursor: pointer;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  user-select: none;
 }
-
-.App-link {
-  color: #61dafb;
+.show{
+  font-size: 0.6vw;
+  display: block;
+  flex-direction: column;
+  padding: 2rem 0;
+  background: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hide{
+  display: none;
 }
